--- a/JSP/jsp.html
+++ b/JSP/jsp.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="jsp.css">
 </head>
 <body>
-    <h1> Hello guys </h1>
-
-    <link rel="stylesheet" href="jsp.js">
+    <div class="flag">
+        <p>the flag</p>
+        <div>
+            <div><p> of Sorce</p></div>
+        </div>
+    </div>
 </body>
-</html>
+</html>3
